--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3"
 
 services:
   namenode:
@@ -7,28 +7,25 @@ services:
     environment:
       - CLUSTER_NAME=test
     ports:
-      - "9870:9870"
+      - "50070:50070"
       - "9000:9000"
     volumes:
       - namenode:/hadoop/dfs/name
-    networks:
-      - hadoop
 
   datanode:
     image: bde2020/hadoop-datanode:2.0.0-hadoop2.7.4-java8
     container_name: datanode
     environment:
-      - CLUSTER_NAME=test
       - CORE_CONF_fs_defaultFS=hdfs://namenode:9000
     ports:
-      - "9864:9864"
+      - "50075:50075"
     volumes:
       - datanode:/hadoop/dfs/data
-    networks:
-      - hadoop
+    depends_on:
+      - namenode
 
   hive-metastore-postgresql:
-    image: postgres:10
+    image: bde2020/hive-metastore-postgresql:2.3.0
     container_name: hive-metastore-postgresql
     environment:
       POSTGRES_DB: metastore
@@ -36,44 +33,32 @@ services:
       POSTGRES_PASSWORD: hive
     ports:
       - "5432:5432"
-    networks:
-      - hadoop
 
   hive-metastore:
     image: bde2020/hive:2.3.2-postgresql-metastore
     container_name: hive-metastore
     environment:
-      - HIVE_METASTORE_DB_TYPE=postgres
-      - HIVE_METASTORE_DB_HOST=hive-metastore-postgresql
-      - HIVE_METASTORE_DB_NAME=metastore
-      - HIVE_METASTORE_DB_USER=hive
-      - HIVE_METASTORE_DB_PASS=hive
-      - SERVICE_PRECONDITION=hive-metastore-postgresql:5432
+      HIVE_METASTORE_DB_TYPE: postgres
+      HIVE_METASTORE_DB_HOST: hive-metastore-postgresql
+      HIVE_METASTORE_DB_NAME: metastore
+      HIVE_METASTORE_DB_USER: hive
+      HIVE_METASTORE_DB_PASS: hive
+      SERVICE_PRECONDITION: "hive-metastore-postgresql:5432"
     ports:
       - "9083:9083"
     depends_on:
       - hive-metastore-postgresql
-    networks:
-      - hadoop
 
   hive-server:
     image: bde2020/hive:2.3.2-postgresql-metastore
     container_name: hive-server
     environment:
-      - HIVE_METASTORE_URI=thrift://hive-metastore:9083
-      - SERVICE_PRECONDITION=hive-metastore:9083
+      SERVICE_PRECONDITION: "hive-metastore:9083"
     ports:
       - "10000:10000"
-      - "10002:10002"
     depends_on:
       - hive-metastore
-    networks:
-      - hadoop
 
 volumes:
   namenode:
   datanode:
-
-networks:
-  hadoop:
-    driver: bridge
